--- a/Areas/Instructor/Views/Shared/_Layout.cshtml
+++ b/Areas/Instructor/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@model Coursera.Areas.Instructor.Models.MyProfileModel;
+<!DOCTYPE html>
 <html lang="en"
       class="light-style layout-menu-fixed"
       dir="ltr"
@@ -40,6 +41,14 @@
     <link rel="stylesheet" href="~/assets2/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
 
     <link rel="stylesheet" href="~/assets2/vendor/libs/apex-charts/apex-charts.css" />
+    <style>
+        html, body {
+            width: 100%;
+            height: 100%;
+            overflow-x: hidden; /* Prevent horizontal scrolling */
+            overflow-y: auto; /* Optional: control vertical scrolling */
+        }
+    </style>
 
     <!-- Page CSS -->
     <!-- Helpers -->
@@ -184,7 +193,7 @@
                             <li class="nav-item navbar-dropdown dropdown-user dropdown">
                                 <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
                                     <div class="avatar avatar-online">
-                                        <img src="~/assets2/img/avatars/1.png" alt="" class="w-px-40 h-auto rounded-circle" />
+                                        <img src="@Model.Photo" alt="" class="w-px-40 h-100 rounded-circle" />
                                     </div>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end">
@@ -193,12 +202,12 @@
                                             <div class="d-flex">
                                                 <div class="flex-shrink-0 me-3">
                                                     <div class="avatar avatar-online">
-                                                        <img src="~/assets2/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
+                                                        <img src="@Model.Photo" alt="" class="w-px-40 h-100 rounded-circle" />
                                                     </div>
                                                 </div>
                                                 <div class="flex-grow-1">
-                                                    <span class="fw-semibold d-block">John Doe</span>
-                                                    <small class="text-muted">Admin</small>
+                                                    <span class="fw-semibold d-block">@Model.UserName</span>
+                                                    <small class="text-muted">@Model.RoleName</small>
                                                 </div>
                                             </div>
                                         </a>
