--- a/Areas/Instructor/Views/Shared/_Layout.cshtml
+++ b/Areas/Instructor/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿@model Coursera.Areas.Instructor.Models.MyProfileModel;
+﻿@model Coursera.Models.MyCoursesViewModel;
+@{
+    var userPhoto = Model.Profile.Photo;
+    var userName = Model.Profile.UserName;
+    var roleName = Model.Profile.RoleName;
+}
 <!DOCTYPE html>
 <html lang="en"
       class="light-style layout-menu-fixed"
@@ -193,7 +198,7 @@
                             <li class="nav-item navbar-dropdown dropdown-user dropdown">
                                 <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
                                     <div class="avatar avatar-online">
-                                        <img src="@Model.Photo" alt="" class="w-px-40 h-100 rounded-circle" />
+                                        <img src="@userPhoto" alt="" class="w-px-40 h-100 rounded-circle" />
                                     </div>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end">
@@ -202,12 +207,12 @@
                                             <div class="d-flex">
                                                 <div class="flex-shrink-0 me-3">
                                                     <div class="avatar avatar-online">
-                                                        <img src="@Model.Photo" alt="" class="w-px-40 h-100 rounded-circle" />
+                                                        <img src="@userPhoto" alt="" class="w-px-40 h-100 rounded-circle" />
                                                     </div>
                                                 </div>
                                                 <div class="flex-grow-1">
-                                                    <span class="fw-semibold d-block">@Model.UserName</span>
-                                                    <small class="text-muted">@Model.RoleName</small>
+                                                    <span class="fw-semibold d-block">@userName</span>
+                                                    <small class="text-muted">@roleName</small>
                                                 </div>
                                             </div>
                                         </a>
