Update Photo and MyCourses Working good.

--- a/Areas/Instructor/Views/Course/MyCourses.cshtml
+++ b/Areas/Instructor/Views/Course/MyCourses.cshtml
@@ -1,4 +1,4 @@
-﻿@model Coursera.Models.MyCoursesViewModel;
+﻿@model Coursera.Areas.Instructor.Models.MyProfileModel
 
 <!-- Basic Bootstrap Table -->
 <!-- Content wrapper -->
