--- a/Areas/Instructor/Views/Profile/UpdateProfile.cshtml
+++ b/Areas/Instructor/Views/Profile/UpdateProfile.cshtml
@@ -56,6 +56,7 @@
                                         <i class="bx bx-upload d-block d-sm-none"></i>
                                         <input type="file"
                                                id="upload"
+                                               onchange="uploadImage()"
                                                class="account-file-input"
                                                hidden
                                                accept="image/png, image/jpeg" />
