--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Coursera
 @using Coursera.Models
 @using Coursera.Models.Account
+@using Coursera.Areas.Instructor.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
