Added the seperate BaseController for unique Layout.

--- a/Areas/Instructor/Views/Course/AddSection.cshtml
+++ b/Areas/Instructor/Views/Course/AddSection.cshtml
@@ -50,6 +50,9 @@
                                 <div class="col-sm-10">
                                     <button type="submit" class="btn btn-primary">Add Section</button>
                                 </div>
+                                <div class="col-sm-4">
+                                    <a href="@Url.Action("Index", "Course", new { area = "Instructor" })" class="btn btn-secondary">Cancel</a>
+                                </div>
                             </div>
                         </form>
                     </div>
