--- a/Areas/Instructor/Views/Course/AddCourse.cshtml
+++ b/Areas/Instructor/Views/Course/AddCourse.cshtml
@@ -36,17 +36,7 @@
                                 <div class="col-sm-10">
                                     <input type="text" asp-for="CourseName" class="form-control" id="basic-default-name" placeholder="John Doe" />
                                 </div>
-                            </div>
-                            <div class="row mb-3">
-                                <label class="col-sm-2 col-form-label" for="basic-default-company">Company</label>
-                                <div class="col-sm-10">
-                                    <input type="text"
-                                           class="form-control"
-                                           id="basic-default-company"
-                                           placeholder="ACME Inc." />
-                                </div>
-                            </div>
-                        
+                            </div>               
                             <div class="row mb-3">
                                 <label class="col-sm-2 col-form-label" asp-for="CourseDescription">Message</label>
                                 <div class="col-sm-10">
@@ -59,10 +49,15 @@
                                 </div>
                             </div>
                             <div class="row justify-content-end">
-                                <div class="col-sm-10">
+                                <div class="col-sm-4" style="padding-left:52px">
                                     <button type="submit" class="btn btn-primary">Add Course</button>
+                                </div>   
+                                <div class="col-sm-4" >
+                                    <a href="@Url.Action("Index", "Course", new { area = "Instructor" })" class="btn btn-secondary">Cancel</a>
                                 </div>
+
                             </div>
+                            
                         </form>
                     </div>
                 </div>
