--- a/Areas/Instructor/Views/Course/AddLesson.cshtml
+++ b/Areas/Instructor/Views/Course/AddLesson.cshtml
@@ -103,6 +103,9 @@
                                 <div class="col-sm-10">
                                     <button type="submit" class="btn btn-primary">Add Lesson</button>
                                 </div>
+                                <div class="col-sm-4">
+                                    <a href="@Url.Action("Index", "Course", new { area = "Instructor" })" class="btn btn-secondary">Cancel</a>
+                                </div>
                             </div>
                         </form>
                     </div>
