--- a/Areas/Instructor/Views/Course/MyCourses2.cshtml
+++ b/Areas/Instructor/Views/Course/MyCourses2.cshtml
@@ -40,7 +40,7 @@
                             </li>
                         </ul>
                     </td>
-                    <td><span class="badge bg-label-primary me-1">Active</span></td>
+                    <td><span class="badge bg-label-danger me-1">Active</span></td>
                     <td>
                         <div class="dropdown">
                             <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
