--- a/Areas/Instructor/Views/Shared/_Layout.cshtml
+++ b/Areas/Instructor/Views/Shared/_Layout.cshtml
@@ -9,9 +9,10 @@
 
 @{
     
-    var userPhoto = ViewData["UserPhoto"] as string ?? "/assets2/img/default-avatar.png";
+    var userPhoto = ViewData["UserPhoto"] as string ?? "/assets2/img/avatars/userProfile2.jpg";
     var userName = ViewData["UserName"] as string ?? "User";
     var roleName = ViewData["RoleName"] as string ?? "Guest";
+    var Instructors = ViewData["Instructor"] as List<MyProfileModel> ?? new List<MyProfileModel>();
 }
 
 <!DOCTYPE html>
