--- a/Areas/Instructor/Views/Course/AddCourse.cshtml
+++ b/Areas/Instructor/Views/Course/AddCourse.cshtml
@@ -36,7 +36,39 @@
                                 <div class="col-sm-10">
                                     <input type="text" asp-for="CourseName" class="form-control" id="basic-default-name" placeholder="John Doe" />
                                 </div>
-                            </div>               
+                            </div>
+
+                            <div class="card mb-4">                              
+                                <div class="card-body">
+                                    <div class="d-flex align-items-start align-items-sm-center gap-4">
+                                        <img src="@Url.Content("/assets2/img/avatars/userProfile3.jpg")"
+                                             alt="user-avatar"
+                                             class="d-block rounded"
+                                             height="100"
+                                             width="100"
+                                             id="uploadedAvatarImage" />
+                                        <div class="button-wrapper">
+                                            <label for="uploadImage" class="btn btn-primary me-2 mb-4" tabindex="0">
+                                                <span class="d-none d-sm-block">Upload new photo</span>
+                                                <i class="bx bx-upload d-block d-sm-none"></i>
+                                                <input type="file"                                                    
+                                                       id="uploadImage"
+                                                       class="account-file-input"
+                                                       hidden
+                                                       accept="image/png, image/jpeg"
+                                                       onchange="ChangeImage()" />                                                       
+                                            </label>
+                                            <button type="button" class="btn btn-outline-secondary account-image-reset mb-4" onclick="ResetImage()">
+                                                <i class="bx bx-reset d-block d-sm-none"></i>
+                                                <span class="d-none d-sm-block">Reset</span>
+                                            </button>
+
+                                            <p class="text-muted mb-0">Allowed JPG or PNG. Max size of 800K</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                             <div class="row mb-3">
                                 <label class="col-sm-2 col-form-label" asp-for="CourseDescription">Message</label>
                                 <div class="col-sm-10">
@@ -49,7 +81,7 @@
                                 </div>
                             </div>
                             <div class="row justify-content-end">
-                                <div class="col-sm-4" style="padding-left:52px">
+                                <div class="col-sm-5" style="padding-left:52px">
                                     <button type="submit" class="btn btn-primary">Add Course</button>
                                 </div>   
                                 <div class="col-sm-4" >
@@ -67,3 +99,21 @@
     </div>
     </div>
     <!-- / Content -->
+
+<script>
+    function ChangeImage()
+    {
+       var FileInput= document.getElementById("uploadImage");
+      var srcImageLocation= document.getElementById("uploadedAvatarImage");
+      if(FileInput && FileInput.files[0])
+      {
+          srcImageLocation.src=window.URL.createObjectURL(FileInput.files[0]);
+      }
+    }
+
+      function ResetImage() {
+        var srcImageLocation = document.getElementById("uploadedAvatarImage");
+        srcImageLocation.src = "@Url.Content("/assets2/img/avatars/userProfile3.jpg")"; // Replace with your default image path
+        document.getElementById("uploadImage").value = ""; // Clear the file input
+    }
+</script>
