--- a/Areas/Instructor/Views/Course/AddCourse.cshtml
+++ b/Areas/Instructor/Views/Course/AddCourse.cshtml
@@ -1,19 +1,22 @@
 ﻿@model AddCourseViewModel;
 
 
-@* <h1>Add New Course</h1>
-<form action="AddCourse" method="post">
+@* 
+<h1>Add New Course</h1>
+<form action="AddCourse" method="post" enctype="multipart/form-data">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <label asp-for="CourseName">Course Name: </label>
     <input type="text" asp-for="CourseName" /> <br /><br/>
     <label asp-for="CourseDescription">Course Description: </label>
     <input type="text" asp-for="CourseDescription" /><br /><br />
+    <label asp-for="formFileImage">Course Name: </label>
+    <input type="file" asp-for="formFileImage" /> <br /><br />
 
     <button class="btn btn-primary" type="submit">Submit</button>
 </form> *@
 
 <!-- Content wrapper -->
-<div class="content-wrapper">
+ <div class="content-wrapper">
     <!-- Content -->
 
     <div class="container-md container-p-y">
@@ -29,7 +32,7 @@
                        
                     </div>
                     <div class="card-body">
-                        <form action="AddCourse" method="post">
+                        <form action="AddCourse" method="post" enctype="multipart/form-data">
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <div class="row mb-3">
                                 <label class="col-sm-2 col-form-label" asp-for="CourseName">Course Name</label>
@@ -54,7 +57,7 @@
                                                 <i class="bx bx-upload d-block d-sm-none"></i>
                                                 <input type="file"                                                    
                                                        id="uploadImage"
-                                                       asp-for="formFile"
+                                                       asp-for="formFileImage"
                                                        class="account-file-input"
                                                        hidden
                                                        accept="image/png, image/jpeg"
@@ -99,7 +102,7 @@
             <!-- Basic with Icons -->
         </div>
     </div>
-    </div>
+    </div> 
     <!-- / Content -->
 
 <script>
