--- a/Areas/Instructor/Views/Course/MyCourses2.cshtml
+++ b/Areas/Instructor/Views/Course/MyCourses2.cshtml
@@ -1,61 +1,73 @@
-﻿ <!-- Basic Bootstrap Table -->
-<div class="card">
-    <div class="table-responsive text-nowrap">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Project</th>
-                    <th>Client</th>
-                    <th>Users</th>
-                    <th>Status</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody class="table-border-bottom-0">
-                <tr>
-                    <td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>Angular Project</strong></td>
-                    <td>Albert Cook</td>
-                    <td>
-                        <ul class="list-unstyled users-list m-0 avatar-group d-flex align-items-center">
-                            <li data-bs-toggle="tooltip"
-                                data-popup="tooltip-custom"
-                                data-bs-placement="top"
-                                class="avatar avatar-xs pull-up"
-                                title="Lilian Fuller">
-                                <img src="../assets/img/avatars/5.png" alt="Avatar" class="rounded-circle" />
-                            </li>
-                            <li data-bs-toggle="tooltip"
-                                data-popup="tooltip-custom"
-                                data-bs-placement="top"
-                                class="avatar avatar-xs pull-up"
-                                title="Sophia Wilkerson">
-                                <img src="../assets/img/avatars/6.png" alt="Avatar" class="rounded-circle" />
-                            </li>
-                            <li data-bs-toggle="tooltip"
-                                data-popup="tooltip-custom"
-                                data-bs-placement="top"
-                                class="avatar avatar-xs pull-up"
-                                title="Christina Parker">
-                                <img src="../assets/img/avatars/7.png" alt="Avatar" class="rounded-circle" />
-                            </li>
-                        </ul>
-                    </td>
-                    <td><span class="badge bg-label-danger me-1">Active</span></td>
-                    <td>
-                        <div class="dropdown">
-                            <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                                <i class="bx bx-dots-vertical-rounded"></i>
-                            </button>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="javascript:void(0);"><i class="bx bx-edit-alt me-1"></i> Edit</a>
-                                <a class="dropdown-item" href="javascript:void(0);"><i class="bx bx-trash me-1"></i> Delete</a>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-           
-            </tbody>
-        </table>
+﻿ @model MyProfileModel
+
+<!-- Content -->
+
+<div class="container-xxl flex-grow-1 container-p-y">
+    <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Tables /</span> Basic Tables</h4>
+
+    <!-- Basic Bootstrap Table -->
+    <div class="card">
+        <h5 class="card-header">Table Basic</h5>
+        <div class="table-responsive text-nowrap">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Courses</th>
+                        <th>Images</th>
+                        <th>Status</th>
+                        <th>Publish</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody class="table-border-bottom-0">
+                    @foreach(var course in Model.AllCourses)
+                    {
+                        <tr>
+                            <td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>@course.CourseName</strong></td>
+                            <td>
+                                <img src="@course.CourseImage"
+                                     alt="user-avatar"
+                                     class="d-block rounded"
+                                     height="50"
+                                     width="50"/>
+                            </td>
+                            @if(course.ApprovalStatus==Coursera.Models.ApprovalStatus.Approved)
+                            {
+                                <td><span class="badge bg-label-success me-1">Approved</span></td>
+                            }
+                            else if (course.ApprovalStatus == Coursera.Models.ApprovalStatus.Rejected)
+                            {
+                                <td><span class="badge bg-label-danger me-1">Active</span></td>
+                            }
+                            else
+                            {
+                                <td><span class="badge bg-label-warning me-1">Pending</span></td>
+                            }
+                            
+                            @if(course.IsPublished)
+                            {
+                                <td><span class="badge bg-label-primary me-1"> Published</span></td>
+                            }else{
+                                <td><span class="badge bg-label-danger me-1">Not Published</span></td>
+                            }
+                            
+                            <td>
+                                <div class="dropdown">
+                                    <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
+                                        <i class="bx bx-dots-vertical-rounded"></i>
+                                    </button>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="javascript:void(0);"><i class="bx bx-edit-alt me-1"></i> Edit</a>
+                                        <a class="dropdown-item" href="javascript:void(0);"><i class="bx bx-trash me-1"></i> Delete</a>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                    }
+                                   
+                </tbody>
+            </table>
+        </div>
     </div>
+    <!--/ Basic Bootstrap Table -->
 </div>
-<!--/ Basic Bootstrap Table -->
