--- a/Areas/Instructor/Views/Course/MyCourses2.cshtml
+++ b/Areas/Instructor/Views/Course/MyCourses2.cshtml
@@ -20,6 +20,18 @@
                     </tr>
                 </thead>
                 <tbody class="table-border-bottom-0">
+                    @if (TempData["ErroMessage"]!=null)
+                    {
+                        <p>@TempData["ErroMessage"]</p>
+                    }
+                    @if (TempData["SuccessMessage"]!=null)
+                    {
+                        <p>@TempData["SuccessMessage"]</p>
+                    }
+                    @if (ViewBag.ErrorMessage!=null)
+                    {
+                        <p>ViewBag.ErrorMessage</p>
+                    }
                     @foreach(var course in Model.AllCourses)
                     {
                         <tr>
@@ -57,8 +69,8 @@
                                         <i class="bx bx-dots-vertical-rounded"></i>
                                     </button>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="javascript:void(0);"><i class="bx bx-edit-alt me-1"></i> Edit</a>
-                                        <a class="dropdown-item" href="javascript:void(0);"><i class="bx bx-trash me-1"></i> Delete</a>
+                                        <a class="dropdown-item" href="@Url.Action("EditAllCourses","Course",new { area = "Instructor", CourseId=course.CourseId })"><i class="bx bx-edit-alt me-1"></i> Edit</a>
+                                        <a class="dropdown-item" href="@Url.Action("DeleteAllCourses","Course",new { area = "Instructor", CourseId=course.CourseId })"><i class="bx bx-trash me-1"></i> Delete</a>
                                     </div>
                                 </div>
                             </td>
